--- a/literature.bib
+++ b/literature.bib
@@ -2883,6 +2883,46 @@ title = {{Auxiliary{\_}readme}}
   journal={JBA Consulting, Skipton},
   year={2008}
 }
+@article{lane2007interactions,
+  title={Interactions between sediment delivery, channel change, climate change and flood risk in a temperate upland environment},
+  author={Lane, SN and Tayefi, V and Reid, SC and Yu, D and Hardy, RJ},
+  journal={Earth Surface Processes and Landforms},
+  volume={32},
+  number={3},
+  pages={429--446},
+  year={2007},
+  publisher={Wiley Online Library}
+}
+@article{miller2013hydrological,
+  title={A hydrological assessment of the November 2009 floods in Cumbria, UK},
+  author={Miller, JD and Kjeldsen, TR and Hannaford, J and Morris, DG},
+  journal={Hydrology Research},
+  volume={44},
+  number={1},
+  pages={180--197},
+  year={2013},
+  publisher={IWA Publishing}
+}
+@article{pappenberger2006influence,
+  title={Influence of uncertain boundary conditions and model structure on flood inundation predictions},
+  author={Pappenberger, Florian and Matgen, Patrick and Beven, Keith J and Henry, Jean-Baptiste and Pfister, Laurent and Fraipont, Paul},
+  journal={Advances in Water Resources},
+  volume={29},
+  number={10},
+  pages={1430--1449},
+  year={2006},
+  publisher={Elsevier}
+}
+@article{fewtrell2011geometric,
+  title={Geometric and structural river channel complexity and the prediction of urban inundation},
+  author={Fewtrell, Timothy J and Neal, Jeffrey C and Bates, Paul D and Harrison, Peter J},
+  journal={Hydrological Processes},
+  volume={25},
+  number={20},
+  pages={3173--3186},
+  year={2011},
+  publisher={Wiley Online Library}
+}
 
 
 
